--- a/Test app/Info.plist
+++ b/Test app/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>to get location</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>to get location</string>
 	<key>NSCameraUsageDescription</key>
 	<string>To take pictures </string>
 	<key>CFBundleDevelopmentRegion</key>
