1. image replace 2. add comments 3.make UNIT TESTS

--- a/Test app.xcodeproj/xcshareddata/xcschemes/Test app.xcscheme
+++ b/Test app.xcodeproj/xcshareddata/xcschemes/Test app.xcscheme
@@ -28,6 +28,16 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "3A825DA123F9BC2300A1C39E"
+               BuildableName = "Test appTests.xctest"
+               BlueprintName = "Test appTests"
+               ReferencedContainer = "container:Test app.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
